[SR-995] Handle name changes to ArrayLiteralConvertible associated type

This is just being more general and defensive to handle name changes in
the stdlib.